관리자게시판, 마무리작업

--- a/src/main/resources/templates/board/adminList.html
+++ b/src/main/resources/templates/board/adminList.html
@@ -110,7 +110,7 @@
 </body>
 <script>
     const saveReq = () => {
-        location.href = "/board/write";
+        location.href = "/board/adminWrite";
     }
 
 </script>
