--- a/src/main/resources/templates/board/adminWrite.html
+++ b/src/main/resources/templates/board/adminWrite.html
@@ -16,7 +16,7 @@
 </header>
 
 <!-- action속성 : 목적지(서버주소)-->
-<form id="mainForm" action="/board/write" method="post">
+<form id="mainForm" action="/board/userWrite" method="post">
     <div>
         <label class="form-label fw-bold fs-5">제목</label>
         <input class="form-control" type="text" name="title" required>
