--- a/src/main/resources/templates/fragments/adminLeft.html
+++ b/src/main/resources/templates/fragments/adminLeft.html
@@ -39,9 +39,7 @@
             <h2 class="subtitle">매출 현황</h2>
         </div>
         <div class="link-container">
-            <a href="#" class="link">일 매출</a>
-            <a href="#" class="link">월 매출</a>
-            <a href="#" class="link">년 매출</a>
+            <a href="/admin/sales" class="link">매출</a>
         </div>
     </div>
 </div>
