--- a/src/main/resources/templates/admin/deleteHotel.html
+++ b/src/main/resources/templates/admin/deleteHotel.html
@@ -12,10 +12,10 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/admin/reservationStatus.css">
+    <link rel="stylesheet" href="/css/admin/deleteHotel.css">
 
     <!-- js -->
-    <script defer src="/js/admin/reservationStatus.js"></script>
+    <script defer src="/js/admin/deleteHotel.js"></script>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 호텔 삭제</h1>
                 </div>
-                <div class="reservation-table-container">
+                <div class="delete-hotel-container">
                     <span class="text">호텔 삭제 테이블 공간(호텔 종류를 테이블에서 가져와서 게시판 형식으로 나열한 뒤 삭제 버튼으로 삭제할 예정)</span>
                 </div>
             </div>
