--- a/src/main/resources/templates/admin/inquiry.html
+++ b/src/main/resources/templates/admin/inquiry.html
@@ -12,10 +12,10 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/admin/reservationStatus.css">
+    <link rel="stylesheet" href="/css/admin/inquiry.css">
 
     <!-- js -->
-    <script defer src="/js/admin/reservationStatus.js"></script>
+    <script defer src="/js/admin/inquiry.js"></script>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
                 <div class="title-container">
                     <h1 class="title">문의 사항 > 문의 내역</h1>
                 </div>
-                <div class="reservation-table-container">
+                <div class="inquiry-container">
                     <span class="text">문의사항 테이블 공간(문의사항 table에서 데이터 가져와서 게시판 형식으로 나열. 답글 다는 방식으로 만들 예정)</span>
                 </div>
             </div>
