--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -12,7 +12,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/admin/reservationStatus.css">
+    <link rel="stylesheet" href="/css/admin/sales.css">
 
     <!-- js -->
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -32,9 +32,8 @@
                 <div class="title-container">
                     <h1 class="title">매출 현황 > 매출</h1>
                 </div>
-                <div class="reservation-table-container">
+                <div class="sales-container">
                     <canvas id="salesGraph"></canvas>
-                    <span th:text="${list}"></span>
                 </div>
             </div>
         </div>
