--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -56,6 +56,68 @@ button {
     flex: 1;
 }
 
+#hotelList {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(0.125rem);
+    background-color: #17202aa0;
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    transition-duration: 250ms;
+    transition-property: opacity;
+    transition-timing-function: ease;
+    z-index: 999;
+}
+
+#hotelList.visible {
+    opacity: 1;
+    pointer-events: all;
+}
+
+#hotelList > .modal {
+    padding: 2rem 3.5rem;
+    width: 600px;
+    height: 400px;
+    background-color: #ffffff;
+    top: calc(50% + 1rem);
+    left: 50%;
+    border-radius: 0.375rem;
+    box-shadow: 0 0 1rem 0.0625rem #17202a50;
+    overflow: hidden;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transition-duration: 250ms;
+    transition-property: top;
+    transition-timing-function: ease;
+
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+#hotelList.visible > .modal {
+    top: 50%;
+}
+
+#hotelList > .modal > .text.area {
+    padding-bottom: 0.5rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    border-bottom: 0.1rem solid #4D473C;
+}
+
+#hotelList > .modal > .label.name {
+    margin: 1rem 0;
+}
+
+#hotelList > .modal > .label.name > input {
+    cursor: pointer;
+}
+
 #header {
     background-color: #F1E3C4;
     height: 90px;
@@ -239,6 +301,12 @@ button {
     border: none;
 }
 
+#searchForm .count {
+    width: 20px;
+    text-align: center;
+    margin: 0 0.35rem;
+}
+
 #searchForm > .search-button {
     padding: 0.925rem 3rem;
     border-radius: 0.375rem;
@@ -253,11 +321,12 @@ button {
     justify-content: space-between;
 }
 
-#searchForm > .label.hotel > .link {
+#searchForm > .label.hotel > .hotelSearch {
     white-space: nowrap;
 }
 
-#searchForm > .label.hotel > .link > .icon {
+#searchForm > .label.hotel > .hotelSearch > .icon {
+    cursor: pointer;
     height: 1.25rem;
     margin-bottom: 0.275rem;
 }
@@ -278,11 +347,11 @@ button {
 }
 
 #searchForm > .label.person > .adult-container > .count-container,
-#searchForm > .label.person > .child-container > .count-container{
+#searchForm > .label.person > .child-container > .count-container {
     align-items: center;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 #searchForm > .label.person > .child-container {
@@ -292,6 +361,7 @@ button {
 #searchForm > .label.person .icon {
     height: 1.125rem;
     margin-bottom: 0.25rem;
+    cursor: pointer;
 }
 
 .admin-left {
