--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <title>Document</title>
+
     <!--  cdns  -->
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
 
@@ -21,10 +23,12 @@
     <script defer src="/js/datepicker.js"></script>
     <script defer src="/js/datepicker.ko.js"></script>
     <script defer src="/js/hotel/reservationStep1.js"></script>
-
-    <title>Document</title>
+    <script defer src="/js/common.js"></script>
 </head>
 <body>
+
+<th:block th:replace="~{fragments/hotelList.html :: hotelList}"></th:block>
+
 
 <header id="header" class="content-container-wrapper">
     <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
