--- a/src/main/resources/templates/hotel/reservationStep2.html
+++ b/src/main/resources/templates/hotel/reservationStep2.html
@@ -25,6 +25,7 @@
 </header>
 
 <main id="main" class="content-container-wrapper">
+    <span th:text="${reservation}"></span>
     <div class="content-container">
         <div class="title-container">
             <h1 class="title">예약 확인 및 결제</h1>
