--- a/src/main/resources/templates/hotel/reservationStep2.html
+++ b/src/main/resources/templates/hotel/reservationStep2.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>예약 확인 및 결제</title>
 
     <!--  cdns  -->
     <th:block th:insert="~{fragments/link.html :: link_fragment}"></th:block>
@@ -14,9 +15,9 @@
     <!--    reservationStep1.css  -->
     <link rel="stylesheet" href="/css/hotel/reservationStep2.css">
 
-
-
-    <title>예약 확인 및 결제</title>
+    <!-- js -->
+    <script defer src="/js/common.js"></script>
+    <script defer src="/js/hotel/reservationStep2.js"></script>
 </head>
 <body>
 
