--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -2,7 +2,8 @@
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-a:link, a:visited {
+a.link, a:visited {
+    cursor: pointer;
     text-decoration: none;
 }
 
