--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -2,8 +2,7 @@
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-a.link, a:visited {
-    cursor: pointer;
+a:link, a:visited {
     text-decoration: none;
 }
 
