--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
 <th:block th:fragment="header_fragment">
     <div class="content-container menu">
         <h1 class="item logo">
-            <a class="link" onclick="navigateTo('/')">
+            <a class="link" href="/">
                 <img th:src="@{/images/ITHOTEL.header.png}" class="title-logo">
             </a>
         </h1>
@@ -17,9 +17,9 @@
         <div class="subMenu">
             <div class="userArea">
                 <div class="welcome-message-container" sec:authorize="hasRole('ROLE_USER')">
-                    <a class="link name" onclick="navigateTo('/user/myinfo')" th:text="${#authentication.Principal.userDto.name}"></a>님 환영합니다!
+                    <a class="link name" href="/user/myinfo" th:text="${#authentication.Principal.userDto.name}"></a>님 환영합니다!
                 </div>
-                <a class="link" onclick="navigateTo('/user/myinfo')" sec:authorize="hasRole('ROLE_USER')">
+                <a class="link" href="/user/myinfo" sec:authorize="hasRole('ROLE_USER')">
                     <span class="text">마이페이지</span>
                 </a>
                 <a href="/admin/reservationStatus?region=seoul" class="link" sec:authorize="hasRole('ROLE_ADMIN')">
@@ -28,7 +28,7 @@
                 <a href="/user/login" class="link" sec:authorize="isAnonymous()">
                     <span class="text">로그인</span>
                 </a>
-                <a class="link" onclick="navigateTo('/logout')" sec:authorize="isAuthenticated()">
+                <a class="link" href="logout" sec:authorize="isAuthenticated()">
                     <span class="text">로그아웃</span>
                 </a>
                 <a href="/user/join" class="link" sec:authorize="isAnonymous()">
@@ -36,9 +36,9 @@
                 </a>
             </div>
             <div class="hotelArea">
-                <a class="link" onclick="navigateTo('/hotel/find')">호텔 찾기</a>
-                <a class="link" onclick="navigateTo('/hotel/info')">호텔 소개</a>
-                <a class="link" onclick="navigateTo('#')" sec:authorize="hasRole('ROLE_USER') || isAnonymous()">고객 문의</a>
+                <a class="link" href="/hotel/find">호텔 찾기</a>
+                <a class="link" href="/hotel/info">호텔 소개</a>
+                <a class="link" href="#" sec:authorize="hasRole('ROLE_USER') || isAnonymous()">고객 문의</a>
             </div>
         </div>
     </div>
