--- a/src/main/resources/static/css/hotel/reservationStep2.css
+++ b/src/main/resources/static/css/hotel/reservationStep2.css
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 
+.pay-method-button {
+    width: 100px;
+    height: 50px;
+    border: 0.0625rem solid #bcbcbc;
+    border-radius: 8px;
+    margin-right: 1rem;
+}
+
+.pay-method-button.clicked {
+    background-color: #bcbcbc;
+}
+
+
 .title-container > .title {
     text-align: center;
     margin: 4rem 0 2rem 0;
@@ -108,7 +121,7 @@
     height: 200px;
 }
 
-.confirmation-payment-container > .payment-container > .payment-left > .terms-container {
+.confirmation-payment-container > .payment-container > .payment-left > .pay-method-container {
     padding: 1.25rem;
     border: 0.0625rem solid #9c9c9c;
     margin-top: 1.25rem;
@@ -121,4 +134,11 @@
     margin-top: 1.25rem;
     width: 300px;
     height: 400px;
+}
+
+.confirmation-payment-container > .payment-container > .payment-right > .price-container > .pay-button {
+    width: 80px;
+    height: 50px;
+    background-color: #9c9c9c;
+    border-radius: 10px;
 }
