--- a/src/main/resources/templates/board/admin/adminList.html
+++ b/src/main/resources/templates/board/admin/adminList.html
@@ -86,21 +86,21 @@
             <a class="page-link" th:if="${param.keyword == null}" th:href="${boardList.first} ? '#' : @{/board/admin/adminList(page=${pageNumber - 1})}" aria-label="Previous">
                 <span aria-hidden="true">&lt;</span>
             </a>
-            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.first} ? '#' : @{/board/admin/adminList(page=${pageNumber - 1}, keyword=${param.keyword})}" aria-label="Previous">
+            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.first} ? '#' : @{/board/admin/adminList(page=${pageNumber - 1}, type=${param.type}, keyword=${param.keyword})}" aria-label="Previous">
                 <span aria-hidden="true">&lt;</span>
             </a>
         </li>
 
         <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
             <a th:text="${page}" th:if="${param.keyword == null}" class="page-link" th:href="@{/board/admin/adminList(page=${page - 1})}"></a>
-            <a th:text="${page}" th:if="${param.keyword != null}" class="page-link" th:href="@{/board/admin/adminList(page=${page - 1}, keyword=${param.keyword})}"></a>
+            <a th:text="${page}" th:if="${param.keyword != null}" class="page-link" th:href="@{/board/admin/adminList(page=${page - 1}, type=${param.type}, keyword=${param.keyword})}"></a>
         </li>
 
         <li th:classappend="${boardList.last} ? 'disabled'" class="page-item">
             <a class="page-link" th:if="${param.keyword == null}" th:href="${boardList.last} ? '#' : @{/board/admin/adminList(page=${pageNumber + 1})}" aria-label="Next">
                 <span aria-hidden="true">&gt;</span>
             </a>
-            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.last} ? '#' : @{/board/admin/adminList(page=${pageNumber + 1}, keyword=${param.keyword})}" aria-label="Next">
+            <a class="page-link" th:if="${param.keyword != null}" th:href="${boardList.last} ? '#' : @{/board/admin/adminList(page=${pageNumber + 1}, type=${param.type}, keyword=${param.keyword})}" aria-label="Next">
                 <span aria-hidden="true">&gt;</span>
             </a>
         </li>
@@ -108,10 +108,4 @@
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
 </body>
-<script>
-    const saveReq = () => {
-        location.href = "/board/admin/adminWrite";
-    }
-
-</script>
 </html>
