--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>게시글</title>
     <link rel="stylesheet" href="/css/board/detail.css">
+    <link rel="stylesheet" href="/css/common.css">
     <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
     <script defer src="/js/board/detail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -16,14 +17,45 @@
 <div class="card mb-4">
     <div class="card-body">
         <form>
+            <div>
+                <span>id</span>
+                <th:block th:text="${board.id}"></th:block>
+            </div>
+            <div class="mb-3">
+                <label for="title" class="form-label">제목</label>
+                <input type="text" class="form-control" id="title" name="title"
+                       th:value="${board.title}" disabled>
+            </div>
             <div class="mb-3">
                 <label for="content" class="form-label">내용</label>
                 <textarea class="form-control" id="content" name="content" disabled
                           th:text="${board.content}"></textarea>
+                <div class="mb-3">
+                    <label for="createdAt" class="form-label">작성일</label>
+                    <input type="text" class="form-control" id="createdAt" name="createdAt"
+                           th:value="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm')}" disabled>
+                </div>
+                <div class="mb-3">
+                    <label for="createdAt" class="form-label">수정일</label>
+                    <input type="text" class="form-control" id="updatedAt" name="updatedAt"
+                           th:value="${#temporals.format(board.updatedTime, 'yyyy-MM-dd HH:mm')}" disabled>
+                </div>
+                <div class="mb-3">
+                    <label for="writer" class="form-label">작성자</label>
+                    <input type="text" class="form-control" id="writer" name="writer"
+                           th:value="${board.username}" disabled>
+                </div>
+
+
+                <th:block th:if="${board != null and #authentication.principal instanceof T(org.springframework.security.core.userdetails.UserDetails) and board.getUsername() == #authentication.principal.username}">
+                    <a th:href="@{/board/{id}/update(id=${id})}" class="btn btn-outline-warning">수정</a>
+                    <a th:href="@{/board/{id}/remove(id=${id})}" class="btn btn-outline-danger" onclick="return confirm('삭제하시겠습니까?')">삭제</a>
+                </th:block>
             </div>
         </form>
     </div>
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer_fragment}"></th:block>
+
 </body>
 </html>
