--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>게시글</title>
+    <title>공지 게시글</title>
     <link rel="stylesheet" href="/css/board/detail.css">
+    <link rel="stylesheet" href="/css/common.css">
     <th:block th:insert="~{/fragments/link.html :: link_fragment}"></th:block>
     <script defer src="/js/board/detail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -12,7 +13,7 @@
 <body>
 <th:block th:replace="~{/fragments/header.html :: header_fragment}"></th:block>
 
-<h1>게시판</h1>
+<h1>공지 게시글</h1>
 <div class="card mb-4">
     <div class="card-body">
         <form method="post">
@@ -36,6 +37,11 @@
                        th:value="${#temporals.format(board.createdTime, 'yyyy-MM-dd HH:mm')}" disabled>
             </div>
             <div class="mb-3">
+                <label for="createdAt" class="form-label">수정일</label>
+                <input type="text" class="form-control" id="updatedAt" name="updatedAt"
+                       th:value="${#temporals.format(board.updatedTime, 'yyyy-MM-dd HH:mm')}" disabled>
+            </div>
+            <div class="mb-3">
                 <label for="writer" class="form-label">작성자</label>
                 <input type="text" class="form-control" id="writer" name="writer"
                        th:value="${board.username}" disabled>
@@ -44,5 +50,3 @@
         </form>
     </div>
 </div>
-<button onclick="saveReq()">글작성</button>
-<button onclick="listReq()">게시판 목록</button>
