--- a/src/main/resources/templates/reservation/select.html
+++ b/src/main/resources/templates/reservation/select.html
@@ -13,8 +13,8 @@
 
     <!--    common.css  -->
     <link rel="stylesheet" href="/css/common.css">
-    <!--    reservationStep1.css  -->
-    <link rel="stylesheet" href="/css/hotel/reservationStep1.css">
+    <!--    select.css  -->
+    <link rel="stylesheet" href="/css/reservation/select.css">
 
     <!--  datepicker jQuery -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
 
     <!-- js    -->
     <script defer src="/js/common.js"></script>
-    <script defer src="/js/hotel/reservationStep1.js"></script>
+    <script defer src="/js/reservation/select.js"></script>
 
     <style>
         .ui-widget-header { border: 0px solid #dddddd; background: #fff; }
